packages/build/tests/plugins/fixtures/syntax_error/plugin.js
console.error("An error message thrown by Node.js")
process.exit(1)
